# dirac_hydrogen_code

./: .gitignore  CMakeLists.txt  README.md  input_example.json  main.py  makefile  matrix_tool.c
src/: CMakeLists.txt  RtsMat.h  basis.h  basisInterpolator.h  bdpSchr.cpp  bsplinebasis.cpp  bsplinebasis.h  cWavefunc.h  carrierBDP.cpp  carrierPotential.h  counterpulseMPItest.cpp  defs-DESKTOP-L8OD55K.h  defs.h  dipoleMPItest.cpp  dirBdp-UiB3104916.cpp  dirBdp.cpp  dkbbasis-UiB3104916.h  dkbbasis.cpp  dkbbasis.h  dkbbasistest.cpp  dplRun.cpp  dplTest.cpp  dumpBdpCouplings.cpp  dumpEigvals.cpp  eigenMPI.cpp  fdbasis.cpp  hamiltonian.h  lanczsosTest.cpp  matrixReplacement.cpp  matwfunc.cpp  mpiFuncs.h  nondipoleMPItest.cpp  parallelBiCGSTAB.h  potential.h  process_output.cpp  propagator.h  rebuild_psit.cpp  reproject.cpp  rthphbasis-UiB3104916.h  rthphbasis.h  (+14 more)
tools/: Makefile  README  bicgstab.c  bicgstab.h  csr.c  csr.h  cuda_solver.cu  cuda_solver.h  cuda_translate.h  dirac_solver.c  gpu_bicgstab.c  gpu_bicgstab.h  gpu_solver.cu  gpu_solver.h  gpu_sparse.c  gpu_sparse.h  gpurun.sh  hip_translate.h  main.py  matrix_tool.c  solver.c  solver.h  solver_common.c  solver_common.h  sorted_list.c  sorted_list.h  spplot.py  superlu.c  superlu.h  types.h  utils.c  utils.h
